--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/svg+xml" href="/vixen.svg" />
         <link rel="stylesheet" href="/index.css" />
+        <title>@vixen-front/base</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div
+            id="root"
+            style="
+                box-sizing: border-box !important;
+                display: block !important;
+                height: 100vh !important;
+                overflow: hidden !important;
+            "
+        ></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
