--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 background-color: transparent !important;
             }
 
-            .mantine-Blockquote-cite,
+            .mantine-Blockquote-root,
             .mantine-Highlight-root,
             .mantine-List-itemLabel,
             .mantine-Mark-root,
